# shell

./: .gitignore  .travis.yml  Makefile.am  NOTES.md  configure.ac  context.c  interactive.c  main.c  p_shell.h  progname.c  script.c  spawn.c  talisker  usage.c  vars.c  wrapper.c
BuildScripts/: .gitignore  talisker.guess  talisker.sub
M4/: .gitignore  tal-buildconf.m4  tal-echo.m4  tal-init.m4  tal-m4.m4  tal-subdirs.m4  tal-system.m4
Resources/CI/: before_install.sh
Sources/: .gitignore  Makefile.am  args.c  context.c  diagnostics.c  main.c  p_messages.h  p_shell.h  parse.c  progname.c  script.c  spawn.c  subshell.c  usage.c  wrapper.c
Sources/Portability/: Makefile.am  p_portability.h  strrchr.c
Sources/Utilities/: .gitignore  Makefile.am
Sources/Utilities/help/: Makefile.am  help.c
Sources/Utilities/pwd/: .gitignore  Makefile.am  pwd.c
Sources/Wrapper/: Makefile.am  main.c
